[package]

name = "Docker_DLC"
version = "1.0.8-beta"
edition = "2021"

[dependencies]

dlc = "=0.7.1"
dlc-manager = "=0.7.1"
dlc-messages = "=0.7.1"
rustls = "0.23.26"
idna = "1.0.0"
openssl = "0.10.72"
ring = "0.17.14"
tokio = "1.44.2"
crossbeam = "0.8.4"
async-trait = "0.1.88"
log = "0.4.27"
thiserror = "2.0.0"
env_logger = "0.11.8"