[package]

name = "Docker_DLC"
version = "1.0.11-beta"
edition = "2024"

[dependencies]

dlc = "=0.7.1"
dlc-manager = "=0.7.1"
dlc-messages = "=0.7.1"
rustls = "0.23.31"
idna = "1.0.0"
openssl = "0.10.72"
ring = "0.17.14"
tokio = "1.47.1"
crossbeam = "0.8.4"
async-trait = "0.1.88"
log = "0.4.27"
thiserror = "2.0.14"
env_logger = "0.11.8"

[lib]

path = "src/main.rs"